User service: Create API for Roles with Keycloak